springrest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-rest-new
  namespace: default
  labels:
    app: spring-rest-new
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-rest-new
  template:
    metadata:
      labels:
        app: spring-rest-new
    spec:
      containers:
        - name: spring-rest-new
          image: exrvoexmoon/spring-rest-new-0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
