service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-rest-new
  namespace: default
spec:
  selector:
    app: spring-rest-new
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30001
