deployment2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: demo.abc.in
      http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: spring-test-app
                port:
                  number: 8082
